# whisper

./: .gitignore  .npmignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  wrapper.h
.cargo/: config.toml  config.toml.copy
.github/workflows/: CI.yml
__test__/: index.spec.mjs
bindings/: whisper.rs
docker/aarch64-unknown-linux-gnu/: Dockerfile
docker/armv7-unknown-linux-gnueabihf/: Dockerfile
docker/x86_64-unknown-linux-musl/: Dockerfile
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
