[package]
edition = "2021"
name = "nguyen-t_whisper"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
hound = "3.5.1"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0.83"
napi-build = "2.0.1"

[profile.release]
lto = true
